# github-trend-pipeline

./: .env.docker  .env.example  .gitignore  Dockerfile.api  Dockerfile.job  Makefile  README.md  pyproject.toml  requirements.txt
pipeline/: api_models.py  bq.py  compute.py  config.py  extract.py  run_daily.py  serve.py  setup.py  transform.py
sql/00_setup/: datasets.sql  mart_tables.sql  raw_tables.sql  tables.sql
sql/10_staging/: 00_explore_source.sql  01_sample_rows.sql  stg_github_events.sql
sql/20_models/: daily_repo_activity.sql  repo_dim.sql
sql/30_marts/: 00_trending_repos_daily.sql  01_trending_repos_enriched.sql  02_trending_languages_daily.sql
